--- a/clash.ini
+++ b/clash.ini
@@ -14,7 +14,8 @@ ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clas
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=❌ BanAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=❌ BanAPPAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=❇️ Bard,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BardAI/BardAI.list
+;ruleset=❇️ Bard,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BardAI/BardAI.list
+ruleset=🌐 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=📢 FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
@@ -51,7 +52,8 @@ custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+;custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🌐 Google`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 ;custom_proxy_group=📺 Bahamut`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
