--- a/clash.ini
+++ b/clash.ini
@@ -22,6 +22,7 @@ ruleset=☁ OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=Ⓜ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📠 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🤖 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🎶 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
@@ -51,6 +52,7 @@ custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]👆 Manual`[]HongKong`[]
 custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🎵 TikTok`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 ;custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🌐 Google`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
