--- a/clash.ini
+++ b/clash.ini
@@ -51,27 +51,27 @@ ruleset=✋ Final,[]FINAL
 custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=🎵 TikTok`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-;custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=🌐 Google`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🎵 TikTok`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+;custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🌐 Google`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 ;custom_proxy_group=📺 Bahamut`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
 custom_proxy_group=♍ Bilibili`select`[]🐼 China`[]Taiwan`[]HongKong
-custom_proxy_group=📺 GlobalMedia`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=📺 GlobalMedia`select`[]✔ AutoBest`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📺 ChinaMedia`select`[]DIRECT`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan
-custom_proxy_group=📢 FCM`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
-custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
-custom_proxy_group=Ⓜ Microsoft`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
-custom_proxy_group=🎮 Game`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
-custom_proxy_group=🎶 NetEaseMusic`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=🐼 China`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual
+custom_proxy_group=📢 FCM`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+custom_proxy_group=Ⓜ Microsoft`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+custom_proxy_group=🎮 Game`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+custom_proxy_group=🎶 NetEaseMusic`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual`(网易|音乐|解锁|Music|NetEase)
+custom_proxy_group=🐼 China`select`[]DIRECT`[]✔ AutoBest`[]👆 Manual
 custom_proxy_group=❌ BanAD`select`[]REJECT`[]DIRECT`[]👆 Manual
 custom_proxy_group=❌ BanAPPAD`select`[]REJECT`[]DIRECT`[]👆 Manual
-custom_proxy_group=✋ Final`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea
+custom_proxy_group=✋ Final`select`[]✔ AutoBest`[]👆 Manual`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea
 custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Japan`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=USA`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
