--- a/clash.ini
+++ b/clash.ini
@@ -18,6 +18,7 @@ ruleset=📢 FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ;ruleset=❇️ Bard,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BardAI/BardAI.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=Ⓜ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ruleset=☁ OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=Ⓜ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -55,6 +56,7 @@ custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]👆 Manual`[]Singapore
 custom_proxy_group=🎵 TikTok`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 ;custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=Ⓜ Copilot`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🌐 Google`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
