--- a/clash.ini
+++ b/clash.ini
@@ -15,10 +15,10 @@ ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clas
 ruleset=❌ BanAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=❌ BanAPPAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=📢 FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-;ruleset=❇️ Bard,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BardAI/BardAI.list
+;ruleset=❇️ Gemini,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-;ruleset=Ⓜ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+;ruleset=Ⓜ Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=☁ OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=Ⓜ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -40,11 +40,12 @@ ruleset=📺 ChinaMedia,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master
 ruleset=📺 GlobalMedia,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🌐 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🛰 Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=🐼 China,[]GEOIP,LAN
-ruleset=🐼 China,[]GEOIP,CN
+ruleset=🐼 China,[]GEOIP,CN,no-resolve
 ruleset=✋ Final,[]FINAL
 ;设置规则标志位
 
@@ -55,8 +56,8 @@ custom_proxy_group=✔ AutoBest`url-test`.*`http://www.gstatic.com/generate_204`
 custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🎵 TikTok`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-;custom_proxy_group=❇️ Bard`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-;custom_proxy_group=Ⓜ Copilot`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+;custom_proxy_group=❇️ Gemini`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+;custom_proxy_group=Ⓜ Bing`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🌐 Google`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
@@ -85,7 +86,3 @@ custom_proxy_group=➡NETFLIX`select`(NF|奈飞|解锁|流媒体|Netflix|NETFLIX
 
 enable_rule_generator=true
 overwrite_original_rules=true
-
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
-
-;luck
