--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -1,12 +1,12 @@
 payload:
-    - +.hhiec.com
-    - +.zbiptv.com
-    - +.52kukan.net
-    - +.7xdy.com
-    - +.galaxyappstore
-    - +.41319.life
+  - DOMAIN-SUFFIX,hhiec.com
+  - DOMAIN-SUFFIX,zbiptv.com
+  - DOMAIN-SUFFIX,52kukan.net
+  - DOMAIN-SUFFIX,7xdy.com
+  - DOMAIN-KEYWORD,galaxyappstore
+  - DOMAIN-SUFFIX,41319.life
 # ntp 服务
-    - +.ntp.org
-    - DST-PORT,123
+  - DOMAIN-SUFFIX,ntp.org
+  - DST-PORT,123
 #
-    - +.reflix.top
+  - DOMAIN-SUFFIX,reflix.top
