--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -1,4 +1,5 @@
 payload:
+  - DOMAIN-SUFFIX,41319.life
   - DOMAIN-SUFFIX,hhiec.com
   - DOMAIN-SUFFIX,zbiptv.com
   - DOMAIN-SUFFIX,52kukan.net
@@ -12,4 +13,4 @@ payload:
   - DOMAIN-SUFFIX,reflix.top
   - DOMAIN-SUFFIX,snfaka.com
   - DOMAIN-SUFFIX,feiyangdigital.top
-  - DOMAIN-SUFFIX,41319.life
+  - DOMAIN-SUFFIX,zbds.top
