--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -19,3 +19,5 @@ payload:
   - DOMAIN-SUFFIX,youxia.net
   - DOMAIN-SUFFIX,youxi233.com
   - DOMAIN-SUFFIX,youxi299.com
+#
+  - DOMAIN-KEYWORD,ysgc*
