--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -77,6 +77,7 @@ payload:
   - DOMAIN-SUFFIX,bingdou.vip
   - DOMAIN-SUFFIX,2xiaopan.fun
   - DOMAIN-SUFFIX,miqk.cc
+  - DOMAIN-SUFFIX,360zyx.vip
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
   - DOMAIN-KEYWORD,suoniapi
@@ -90,6 +91,9 @@ payload:
   - DOMAIN-KEYWORD,hongniuzy
   - DOMAIN-KEYWORD,ffzy-play
   - DOMAIN-KEYWORD,wlcdn
+  - DOMAIN-KEYWORD,play-cdn
+  - DOMAIN-KEYWORD,modujx
+  - DOMAIN-KEYWORD,ffzyread
 # 铜钟音乐
   - DOMAIN-SUFFIX,whamon.com
 # 小众软件
