--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -7,6 +7,8 @@ payload:
 # ntp 服务
   - DOMAIN-SUFFIX,ntp.org
   - DST-PORT,123
+# github 直连镜像
+  - DOMAIN-SUFFIX,gh-proxy.com
 #
   - DOMAIN-SUFFIX,reflix.top
   - DOMAIN-SUFFIX,snfaka.com
