--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -133,6 +133,7 @@ payload:
   - DOMAIN-KEYWORD,ffzyread
   - DOMAIN-KEYWORD,lz-cdn
   - DOMAIN-KEYWORD,ffzy-online
+  - IP-CIDR,23.237.228.130/32,no-resolve
 # 铜钟音乐
   - DOMAIN-SUFFIX,whamon.com
 # 小众软件
