--- a/mihomo/rule/TVFix.yaml
+++ b/mihomo/rule/TVFix.yaml
@@ -58,10 +58,7 @@ payload:
   - DOMAIN-SUFFIX,ryzypics.com
   - DOMAIN-SUFFIX,guoluche.com
   - DOMAIN-SUFFIX,mytvapp.cc
-  - DOMAIN-WILDCARD,dytt-*.com
-  # 或者以下两种
-  #- DOMAIN-REGEX,^dytt-.*\.com$
-  #- DOMAIN-REGEX,^dytt-[a-zA-Z0-9-]+?\.com$
+  - DOMAIN-WILDCARD,dytt*.com
   - DOMAIN-SUFFIX,hdzyk-cdn.com
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
