--- a/mihomo/rule/TVFix.yaml
+++ b/mihomo/rule/TVFix.yaml
@@ -59,9 +59,9 @@ payload:
   - DOMAIN-SUFFIX,guoluche.com
   - DOMAIN-SUFFIX,mytvapp.cc
   - DOMAIN-WILDCARD,*.dytt*.com
-  #- DOMAIN-SUFFIX,dytt-live.com
   - DOMAIN-SUFFIX,fengbao8.com
   - DOMAIN-SUFFIX,bfbfvip.com
+  - DOMAIN-SUFFIX,qwe132456.cc
   - DOMAIN-SUFFIX,hdzyk-cdn.com
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
