--- a/mihomo/rule/TVFix.yaml
+++ b/mihomo/rule/TVFix.yaml
@@ -59,6 +59,7 @@ payload:
   - DOMAIN-SUFFIX,guoluche.com
   - DOMAIN-SUFFIX,mytvapp.cc
   - DOMAIN-WILDCARD,*.dytt*.com
+  - DOMAIN-WILDCARD,*.lzcdn*.com
   - DOMAIN-SUFFIX,fengbao8.com
   - DOMAIN-SUFFIX,bfbfvip.com
   - DOMAIN-SUFFIX,qwe132456.cc
